# SFML_VS2022_CMAKE_64-Bit

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
assets/font/: README
assets/music/: README
assets/sfx/: README
assets/shader/: README
assets/texture/: README
